controlando error al editar artículo

--- a/07-Backend-MVC/CarritoCompras/views/MisArticulos.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/MisArticulos.ejs
@@ -15,7 +15,7 @@
       Buscar artículos dentro de mi biblioteca
     </label>
     <div class="col-8">
-      <input class="form-control" type="text" placeholder="Seach" id="mibiblioteca"
+      <input class="form-control" type="text" placeholder="Buscar en mi biblioteca" id="mibiblioteca"
              name="mibiblioteca">
     </div>
   </div>
