--- a/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
@@ -8,7 +8,7 @@
 <form action="/biblioteca">
   <div class="form-group row">
     <label for="busqueda" class="col-4 col-form-label">
-      Buscar artículos que tengan esta palabra
+      Buscar artículos dentro de mi biblioteca
     </label>
     <div class="col-8">
       <input hidden
