--- a/07-Backend-MVC/CarritoCompras/views/UsuarioGestion/login.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/UsuarioGestion/login.ejs
@@ -1,43 +1,49 @@
+<div class="container">
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images\springer.png" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\arxiv.png" alt="Second slide">
+          </div>
+          <div class="carousel-item ">
+            <img class="d-block w-100" src="images\DOAJ.png" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\mrdlib.png" alt="four slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-2"></div>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="images\springer.png" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images\arxiv.png" alt="Second slide">
-    </div>
-    <div class="carousel-item ">
-      <img class="d-block w-100" src="images\DOAJ.png" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images\mrdlib.png" alt="four slide">
-    </div>
+<br>
+<br>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<br>
-<br>
-
 <div class="row">
 
-  <div class="col-sm-1"></div>
-  <div class="col-sm-8">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-6">
 
-    <font color="#01549b"><h1>Login</h1></font>
+    <font color="#01549b"><h2>Login</h2></font>
     <form action="/VerUsuario" method="get" >
 
   <div class="form-group row">
@@ -63,7 +69,9 @@
 
   </div>
 
-  <input class="btn btn-outline-success"type="submit"/>
+
+      <button  type="submit"
+               class="btn btn-outline-success">Entrar</button>
       <a href="/signup">
         <button type="button" class="btn btn-primary">
           Si aun no tienes cuenta regístrate!!
@@ -72,9 +80,11 @@
   </form>
 
   </div>
-  <div class="col-sm-1"></div>
+  <div class="col-sm-4"></div>
+
 
 </div>
 
 
+</div>
 
