--- a/07-Backend-MVC/CarritoCompras/views/header.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/header.ejs
@@ -10,7 +10,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/logout"><h5>EPN SEARCH</h5></a>
+  <a class="navbar-brand" href="/"><h5>EPN SEARCH</h5></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
