--- a/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
@@ -631,11 +631,6 @@
         "<div class='col-md-6'><h4><b>" + pages + "</h4></b></div>" +
         "<div class='col-md-4'> </div>" +
 
-
-        "<div class='col-md-2'><font color='#01549b'><h4><b> Link: </b></h4></font> </div>" +
-        "<div class='col-md-6'>" + urlHtml + "</div>" +
-        "<div class='col-md-4'> </div>" +
-
         "</div>" +
 
         <!-- Button trigger modal -->
@@ -655,7 +650,7 @@
 
         "<label for='apa' class='col-2 col-form-label'><h5>APA</h5></label>"+
         "<div class='col-12'>"+
-        "<p ALIGN='justify'>"+ apellidoAuthoreshardvard + ". ("+year+ "). "+title +".<i> "+journal+" </i>,<i>"+ volume+ "</i>( "+number+" ),"+pages +". Recuperado de "+'<a href="'+ url +'">'+url+'</a>'+"</p>"+
+        "<p ALIGN='justify'>"+ apellidoAuthoreshardvard + " ("+year+ "). "+title +".<i> "+journal+" </i>,<i>"+ volume+ "</i>( "+number+" ),"+pages +". Recuperado de "+'<a href="'+ url +'">'+url+'</a>'+"</p>"+
         "</div>" +
         "<label for='ieee' class='col-2 col-form-label'><h5>IEEE</h5></label>"+
         "<div class='col-12'>"+
