--- a/07-Backend-MVC/CarritoCompras/views/editarArticulo.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/editarArticulo.ejs
@@ -608,7 +608,7 @@
         <div class="modal-body">
           <label for="apa" class="col-2 col-form-label"><h5>APA</h5></label>
           <div class='col-12'>
-          <p ALIGN='justify'> <script>document.write(apellidoAuthoreshardvard +"("+year.substr(-20,4)+")."+ title+".<i>"+ journal+"</i>,<i>" + volume +"</i>(" +number +"),"+pages +". Recuperado de "+'<a href="'+ link +'">'+link+'</a>') </script> </p>
+          <p ALIGN='justify'> <script>document.write(apellidoAuthoreshardvard +"("+year.substr(-20,4)+")."+ title+".<i>"+ journal+"</i>,<i>" + volume +"</i>(" +number +"),"+pages +". Recuperado de "+'<a target="_blank" href="'+ link +'">'+link+'</a>') </script> </p>
           </div>
 
           <label for="ieee" class="col-2 col-form-label"><h5>IEEE</h5></label>
@@ -619,11 +619,11 @@
           </div>
           <label for="harvard" class="col-2 col-form-label"><h5>ISO 690</h5></label>
           <div class="col-12">
-            <p ALIGN='justify'><script>document.write(apellidoAuthoresISO + '(' + year.substr(-20,4) + '), "' + title + '". En: '+"<i>" + journal + "</i> [en línea]. " +editorial+ '. V.' + volume + ', no.' + number + ', pp.' + pages + " [consulta:"+hoy+"].Disponible en: "+'<a href="'+ link +'">'+link+'</a>')</script></p>
+            <p ALIGN='justify'><script>document.write(apellidoAuthoresISO + '(' + year.substr(-20,4) + '), "' + title + '". En: '+"<i>" + journal + "</i> [en línea]. " +editorial+ '. V.' + volume + ', no.' + number + ', pp.' + pages + " [consulta:"+hoy+"].Disponible en: "+'<a target="_blank" href="'+ link +'">'+link+'</a>')</script></p>
           </div>
           <label for="harvard" class="col-2 col-form-label"><h5>Harvard</h5></label>
           <div class="col-12">
-            <p ALIGN='justify'><script>document.write(apellidoAuthoreshardvard + '(' + year.substr(-20,4) + ') "' + title  +' "'+", <i>" +journal + " </i>,"+volume+ "("+number+"), pp."+pages+ ". Disponible en: "+'<a href="'+ link +'">'+link+'</a>'+"<br>[Consultado:"+hoy+"]")</script> </p>
+            <p ALIGN='justify'><script>document.write(apellidoAuthoreshardvard + '(' + year.substr(-20,4) + ') "' + title  +' "'+", <i>" +journal + " </i>,"+volume+ "("+number+"), pp."+pages+ ". Disponible en: "+'<a target="_blank" href="'+ link +'">'+link+'</a>'+"<br>[Consultado:"+hoy+"]")</script> </p>
           </div>
 
           <div class="modal-footer">
