--- a/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
@@ -654,7 +654,7 @@
         "</div>" +
         "<label for='ieee' class='col-2 col-form-label'><h5>IEEE</h5></label>"+
         "<div class='col-12'>"+
-        "<p ALIGN='justify'>" + authorsb + ',"' + title + '", ' + "<i>" + journal + "</i>" + '., vol.' + volume + ', no.' + number + ', pp.' + pages + ',' + ' ' +  year + "</p>" +
+        "<p ALIGN='justify'>" + authorsb + ',"' + title + '", ' + "<i>" + journal + "</i>" + ', vol.' + volume + ', no.' + number + ', pp.' + pages + ',' + ' ' +  year + "</p>" +
 
         "</div>" +
         "<label for='iso' class='col-2 col-form-label'><h5>ISO 690</h5></label>"+
